--- a/src/sass/vue-context.scss
+++ b/src/sass/vue-context.scss
@@ -1,11 +1,11 @@
-@import "config";
+@use "config";
 
 .v-context {
     &, & ul {
-        background-color: $menu-bg;
+        background-color: config.$menu-bg;
         background-clip: padding-box;
         border-radius: .25rem;
-        border: 1px solid $menu-border;
+        border: 1px solid config.$menu-border;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
         display: block;
         margin: 0;
@@ -26,7 +26,7 @@
                 display: block;
                 padding: .5rem 1.5rem;
                 font-weight: 400;
-                color: $item-color;
+                color: config.$item-color;
                 text-decoration: none;
                 white-space: nowrap;
                 background-color: transparent;
@@ -35,8 +35,8 @@
                 &:hover,
                 &:focus {
                     text-decoration: none;
-                    color: $item-hover-color;
-                    background-color: $item-hover-bg;
+                    color: config.$item-hover-color;
+                    background-color: config.$item-hover-bg;
                 }
 
                 &:focus {
